--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,4 +37,6 @@
 @import "./sections/section-blog";
 @import "./sections/section-tabs";
 @import "./sections/section-map";
-@import "./sections/footer";
+@import "./sections/footer-top";
+@import "./sections/footer-middle";
+@import "./sections/footer-bottom";
