--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,30 +1,35 @@
 html {
-    min-height: 100vh; /* sticky footer */
-	scroll-behavior: smooth;
+    min-height: 100vh;
+    /* sticky footer */
+    scroll-behavior: smooth;
 }
 
 body {
-	min-height: 100vh; /* sticky footer */
-	display: flex; /* sticky footer */
-	flex-direction: column; /* sticky footer */
+    min-height: 100vh;
+    /* sticky footer */
+    display: flex;
+    /* sticky footer */
+    flex-direction: column;
+    /* sticky footer */
 
-	font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: $black-color;
     font-size: 16px;
     line-height: 1.15;
 
     text-rendering: optimizeSpeed;
     //text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 
     overflow-x: hidden;
 }
 
-body > * {
-	flex-shrink: 0; /* sticky footer */
+body>* {
+    flex-shrink: 0;
+    /* sticky footer */
 }
 
 // section {
@@ -34,12 +39,12 @@ body > * {
 /* Grid styles */
 
 .container {
-	max-width: 1430px;
+    max-width: 1430px;
     width: 100%;
-	margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
-	padding-left: 15px;
-	padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 
     &--fluid {
         max-width: unset;
@@ -68,7 +73,7 @@ body > * {
 /* Utility */
 
 .none {
-	display: none !important;
+    display: none !important;
 }
 
 .visually-hidden {
@@ -85,10 +90,6 @@ body > * {
 /* Sticky Footer */
 
 .footer {
-	margin-top: auto; /* sticky footer */
-
-	/* Just for fun */
-	text-align: center;
-	background-color: #e2e2e2;
-	padding: 50px 0;
+    margin-top: auto;
+    /* sticky footer */
 }
