--- a/sass/blocks/_review-card.scss
+++ b/sass/blocks/_review-card.scss
@@ -1,19 +1,63 @@
 .review-card {
 	width: 447px;
+}
 
-	.review-card__image {
-		width: 100%;
-		height: 291px;
-		background-color: #262626;
-		border-top-left-radius: 25px;
-		border-top-right-radius: 25px;
+.review-card__image {
+	position: relative;
+	width: 100%;
+	height: 291px;
+	background-color: #262626;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+
+
+	&:before {
+		@include play-icon;
+		width: 164px;
+		height: 164px;
+		background-image: url('./../../img/section-reviews/logo.svg');
+		opacity: 0.2;
 	}
 
-	.review-card__content {
-		width: 100%;
-		height: 294px;
-		background-color: #F2F2F2;
-		border-bottom-left-radius: 25px;
-		border-bottom-right-radius: 25px;
+	&::after {
+		@include play-icon;
 	}
+}
+
+.review-card__content {
+	width: 100%;
+	height: 294px;
+
+	padding: 32px 23px 39px 30px;
+	background-color: #F2F2F2;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+}
+
+.review-card__name {
+	margin-bottom: 30px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.15;
+	text-transform: capitalize;
+}
+
+.review-card__text {
+	margin-bottom: 15px;
+	font-size: 16px;
+	line-height: 1.5;
+	color: $gray-color;
+}
+
+.review-card__readmore {
+	padding-left: 20px;
+	padding-right: 20px;
+	height: 36px;
+	width: 188px;
+	border-radius: 20px;
+	background-color: #E1E1E1;
+	text-align: left;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 36px;
 }
