--- a/sass/sections/_section-cta.scss
+++ b/sass/sections/_section-cta.scss
@@ -1,5 +1,6 @@
 .section-cta {
 	position: relative;
+	padding: 66px 150px 50px 477px;
 	width: 1400px;
 	height: 328px;
 	border-radius: 25px;
@@ -28,4 +29,56 @@
 		background-image: url('./../../img/section-cta/cta.png');
 		transform: translateY(-50%);
 	}
+}
+
+.cta-form {
+	position: relative;
+	color: #FFF;
+	z-index: 9;
+}
+
+.cta-form__title {
+	margin-bottom: 10px;
+	font-weight: 900;
+	font-size: 30px;
+	line-height: 1.17;
+	text-transform: uppercase;
+}
+
+.cta-form__subtitle {
+	margin-bottom: 30px;
+	font-size: 20px;
+	line-height: 1.15;
+
+	span {
+		font-weight: 700;
+		color: $accent-color;
+	}
+}
+
+.cta-form__row {
+	display: flex;
+	align-items: center;
+	column-gap: 38px;
+	margin-bottom: 22px;
+}
+
+.cta-form__input {
+	padding: 25px 20px;
+	width: 369px;
+	height: 65px;
+	background-color: #FFF;
+	border: 1px solid #EFF0F0;
+	border-radius: 6px;
+}
+
+.cta-form__button {
+	width: 369px;
+	height: 65px;
+}
+
+.cta-form__notice {
+	font-size: 13px;
+	line-height: 1.3;
+	color: $gray-color;
 }
