--- a/sass/sections/_section-map.scss
+++ b/sass/sections/_section-map.scss
@@ -1,7 +1,29 @@
 .section-map {
+	margin-bottom: -100px;
+}
+
+.section-map__map-wrapper {
+	position: relative;
+	width: 1870px;
+	height: 570px;
+	border-radius: 25px;
+	overflow: hidden;
+	z-index: -1;
 
 	img {
-		display: block;
-		margin: 0 auto;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
 	}
+}
+
+.section-map__info {
+	position: absolute;
+	top: 107px;
+	right: 235px;
+	width: 401px;
+	height: 258px;
+	border-radius: 15px;
+	background-color: #FFF;
+	box-shadow: 0px 0px 30px rgba(38, 38, 38, 0.15);
 }
