--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -18,15 +18,16 @@
 
 /* Links */
 
-a, a:visited  {
-    color: inherit;
-    text-decoration: none;
-    display: inline-block;
+a,
+a:visited {
+	display: inline-block;
+	color: inherit;
+	text-decoration: none;
 }
 
-a:hover  {
-    color: inherit;
-    text-decoration: none;
+a:hover {
+	color: inherit;
+	text-decoration: none;
 }
 
 a:focus,
@@ -36,12 +37,23 @@ a:active {
 
 /* Common */
 
-aside, nav, footer, header, section, main {
+aside,
+nav,
+footer,
+header,
+section,
+main {
 	display: block;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    font-size: inherit;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	font-size: inherit;
 	font-weight: inherit;
 }
 
@@ -49,7 +61,8 @@ ul {
 	list-style: none;
 }
 
-img, svg {
+img,
+svg {
 	display: block;
 	max-width: 100%;
 	height: auto;
@@ -57,26 +70,32 @@ img, svg {
 
 /* Form */
 
-input, textarea, button, select {
+input,
+textarea,
+button,
+select {
 	font-family: inherit;
-    font-size: inherit;
+	font-size: inherit;
 }
 
 input::-ms-clear {
 	display: none;
 }
 
-button, input[type="submit"] {
-    display: inline-block;
-    box-shadow: none;
-    background-color: transparent;
-    background: none;
-    cursor: pointer;
+button,
+input[type="submit"] {
+	display: inline-block;
+	box-shadow: none;
+	background-color: transparent;
+	background: none;
+	cursor: pointer;
 }
 
-input:focus, input:active,
-button:focus, button:active {
-    outline: none;
+input:focus,
+input:active,
+button:focus,
+button:active {
+	outline: none;
 }
 
 button::-moz-focus-inner {
