--- a/sass/sections/_section-select.scss
+++ b/sass/sections/_section-select.scss
@@ -1,12 +1,45 @@
 .section-select {
-	margin: 0 auto;
-	padding: 22px 30px;
-	width: 1400px;
-	border-radius: 11px;
+	padding-top: 38px;
+}
+
+.section-select__bg {
+	padding: 20px 30px;
+	border-radius: 10px;
 	background-color: rgba(239, 240, 240, 0.5);
 }
 
 .section-select__row {
 	display: flex;
 	justify-content: space-between;
+}
+
+.section-select__brands-list {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	column-gap: 29px;
+	row-gap: 3px;
+	width: 806px;
+
+	li {
+		width: 138px;
+
+		a {
+			display: flex;
+			align-items: center;
+			column-gap: 10px;
+
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+
+		span {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 38px;
+			height: 38px;
+		}
+	}
 }
