--- a/sass/sections/_section-tabs.scss
+++ b/sass/sections/_section-tabs.scss
@@ -1,6 +1,5 @@
 .section-tabs {
-	padding-top: 58px;
-	padding-bottom: 100px;
+	padding-top: 110px;
 }
 
 .section-tabs__list {
@@ -12,18 +11,20 @@
 	font-size: 16px;
 	line-height: 1.19;
 
-	li {
+	li[data-tab] {
 		position: relative;
+		cursor: pointer;
+		transition: color .2s ease-in;
 
-		&:hover {
+		&:hover,
+		&.active {
 			color: $accent-color;
-			cursor: pointer;
 
 			&::after {
 				content: "";
 				position: absolute;
 				left: 0;
-				bottom: -19px;
+				bottom: -20px;
 				width: 100%;
 				height: 3px;
 				background-color: $accent-color;
